[project]
name = "talkinglands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "geoalchemy2>=0.17.1",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
